minor fixes